# WebRTCArchive

./: .gitignore  Cargo.toml  PROJECT_CONTEXT.md  WEBRTC.md  answer_last.sdp  answer_raw.json  config.json  offer.txt  offer_last.sdp  offer_sent.sdp
src/: app_state.rs  archive_loop.rs  archive_protocol.rs  config.rs  main.rs  video_decoder.rs  webrtc_client.rs  webrtc_offer.rs
src/ui/: mod.rs  timeline.rs
