[package]
name = "webrtc_archive_player"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = { version = "0.7", package = "gtk4" }

tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }
url = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

ffmpeg-next = { version = "6.0", features = ["build"] }
webrtc = { path = "third_party/webrtc" }

anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"

[patch.crates-io]
webrtc-ice = { path = "third_party/webrtc-ice" }
webrtc-data = { path = "third_party/webrtc-data" }

